<resources>
    <string name="app_name">Quiz App(CS)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back_to_login">Back to LOGIN</string>
    <string name="quiz">QuiZ</string>
    <string name="teacher">Teacher</string>
    <string name="upload_csv">Upload CSV</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="quiz_id">Quiz ID</string>
    <string name="quiz_description">Quiz Description</string>
    <string name="option">Option</string>
    <string name="_1">1</string>
    <string name="question">Question</string>
    <string name="update">Update</string>

    <string-array name="role_array">
        <item>STUDENT</item>
        <item>TEACHER</item>
    </string-array>
</resources>