<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".ui.register.RegisterFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/register"
            android:textSize="50sp"
            android:letterSpacing="0.3"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_box"
            android:hint="@string/username"
            android:padding="20dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_box"
            android:hint="@string/email"
            android:padding="20dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_box"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:padding="20dp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_box"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:padding="20dp" />

        <Spinner
            android:id="@+id/sRole"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:entries="@array/role_array"
            android:background="@drawable/input_box" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="100dp"
            android:text="@string/register"
            android:textSize="20sp"
            android:textColor="@color/blue2"
            android:backgroundTint="@color/blue3"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/back_to_login"
            android:textSize="20sp"
            android:textColor="@color/black" />

    </LinearLayout>
</layout>
