<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".ui.login.LoginFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:textSize="50sp"
            android:letterSpacing="0.3"
            android:layout_gravity="center" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_box"
            android:hint="@string/enter_email"
            android:padding="20dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_box"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:padding="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="150dp"
            android:text="@string/login"
            android:textSize="20sp"
            android:backgroundTint="@color/blue2"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegisterPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/register"
            android:textSize="20sp"
            android:textColor="@color/blue3" />

    </LinearLayout>
</layout>
