<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvQuizQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:background="#2ADADADA"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=")"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="A." />

                    <TextView
                        android:id="@+id/tvOption1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="B." />

                    <TextView
                        android:id="@+id/tvOption2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="C." />

                    <TextView
                        android:id="@+id/tvOption3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="D." />

                    <TextView
                        android:id="@+id/tvOption4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Answer: "/>

                <TextView
                    android:id="@+id/tvAns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="answer"
                    android:textColor="@color/green"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>